# app_delfin

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  STATUS.md  electron-builder.yml  electron.vite.config.d.ts  electron.vite.config.js  electron.vite.config.mjs  electron.vite.config.ts  install_dependancies.bash  package-lock.json  package.json  screen-copilot-implementation-plan.md  screen-copilot-plan-v2.md  source.bash  test.py  test_api_endpoints.py  test_ingest.py  test_memory_endpoints.py  test_websocket_progress.py  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo
.augment/rules/: delfin.md
.github/workflows/: build-litert-cpp-bridge.yml
demo-content/: README.md
docs/: README.md  SPEC.md  delfin-implementation-plan.md  design-ai-spec.md  minimized-overlay-waveform-continuity-spec.md  overlay-waveform-polish-spec.md  screen-copilot-implementation-plan.md  waveform-ui-spec.md
docs/archive/: delfin-implementation-plan.md  hackathon-mvp.md
docs/explanations/: electron-ipc-and-ws-message-flow.md  phase-1-sidecar-flow.md  react-zustand-state-flow.md  screen-capture-and-window-filtering.md  session-overlay-state-machine.md  sidecar-flow.md  voice-audio-pipeline.md
docs/features/: desktop-distribution-mvp-spec.md  distribution-backend-migration-spec.md  litert-cpp-audio-spec.md  (+10 more)
litert-cpp-bridge/: BUILD.bazel  README.md  app.cc  app.h  main.cc
litert-cpp-bridge/conversation_registry/: conversation_registry.cc  conversation_registry.h
litert-cpp-bridge/engine/: litert_engine_factory.cc  litert_engine_factory.h
litert-cpp-bridge/protocol/: bridge_protocol.cc  bridge_protocol.h
litert-cpp-bridge/session_registry/: session_registry.cc  session_registry.h
litert-cpp-bridge/turn_runner/: turn_runner.cc  turn_runner.h
scripts/: benchmark-sweep.mjs  build-litert-cpp-bridge.mjs  build-litert-cpp-bridge.test.mjs  build-sidecar.mjs  check-env.mjs  check-vad-runtime.mjs  download-models.mjs  download-models.test.mjs  init-env.mjs  litert-cpp-presets.mjs  litert-cpp-proxy.mjs  litert-cpp-proxy.test.mjs  mock-sidecar.js  piper-voice.mjs  piper-voice.test.mjs  run-benchmark.mjs  run-llamafile.mjs  run-sidecar.mjs  setup-check.ps1  setup-check.sh  setup-litert-cpp.mjs  setup-litert-cpp.test.mjs  setup-llamafile.mjs  setup-sidecar.mjs  test-native-backend.sh
sidecar/: .gitignore  =6.0  __init__.py  config.py  delfin-sidecar.spec  logger.py  requirements.txt  server.py  tsconfig.json  tts.py
sidecar-old/: requirements.txt  server.py
(+425 files in other folders)
