cc_binary(
    name = "delfin_litert_bridge",
    srcs = [
        "main.cc",
        "app.cc",
        "engine/litert_engine_factory.cc",
        "turn_runner/turn_runner.cc",
        "protocol/bridge_protocol.cc",
        "session_registry/session_registry.cc",
    ],
    hdrs = [
        "app.h",
        "engine/litert_engine_factory.h",
        "turn_runner/turn_runner.h",
        "protocol/bridge_protocol.h",
        "session_registry/session_registry.h",
    ],
    additional_linker_inputs = select({
        "@platforms//os:windows": [
            "@litert//litert/c:windows_exported_symbols.def",
        ],
        "@platforms//os:linux": ["//runtime/engine:litert_lm_main.exported_symbols"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@litert//litert:litert_link_capi_so": [],
        "@platforms//os:ios": ["-Wl,-exported_symbol,_LiteRt*"],
        "@platforms//os:macos": ["-Wl,-exported_symbol,_LiteRt*"],
        "@platforms//os:windows": [
            "/DEF:$(location @litert//litert/c:windows_exported_symbols.def)",
        ],
        "@platforms//os:linux": ["-Wl,--dynamic-list=$(location //runtime/engine:litert_lm_main.exported_symbols)"],
        "//conditions:default": ["-Wl,--export-dynamic-symbol=LiteRt*"],
    }) + select({
        "@platforms//os:android": ["-lEGL", "-lGLESv3"],
        "//conditions:default": [],
    }),
    deps = [
        "//runtime/conversation:conversation",
        "//runtime/conversation:io_types",
        "//runtime/engine:engine_impl_selected",
        "//runtime/engine:engine_interface",
        "//runtime/engine:engine_factory",
        "//runtime/engine:engine_settings",
        "//runtime/engine:io_types",
        "//runtime/executor:executor_settings_base",
        "//runtime/util:litert_status_util",
        "@com_google_absl//absl/base:log_severity",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/log:globals",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time:time",
        "@litert//litert/cc/internal:scoped_file",
        "@nlohmann_json//:json",
    ],
)
